--- a/Sql.html
+++ b/Sql.html
@@ -59,7 +59,7 @@
 								<header class="major">
 									
 									<h2><a href="">SQL Data Analyst Project Portfolio<br /></a></h2>
-									<p> This project demonstrates my proficiency in SQL, Data Cleaning, Data preparation, data extraction, Max upload, etc. </p>
+									<p> This project demonstrates my proficiency in SQL, Data Cleaning, Data preparation, data extraction, Max upload, etc .</p>
 								</header>
 								
 							</article>
@@ -72,7 +72,7 @@
 										<h2><a href="https://github.com/Softechanalytics/NashvilleHousingDataCleaningwithSql/blob/main/README.md">Nashville Housing<br />
 										Data Cleaning Project</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/NashvilleHousingDataCleaningwithSql/blob/main/README.md" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/NashvilleHousingDataCleaningwithSql/blob/main/README.md" class="image fit"><img src="images/House.jpg" alt="" /></a>
 									<p>This project focuses on cleaning real-world housing data using **SQL** to ensure the dataset is ready for further analysis and visualization.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/NashvilleHousingDataCleaningwithSql/blob/main/README.md" class="button">View Project</a></li>
