--- a/Sql.html
+++ b/Sql.html
@@ -84,7 +84,7 @@
 										<h2><a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md">Retail Sales Analysis<br />
 										using sql</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md" class="image fit"><img src="images/retail.jpg" alt="" /></a>
 									<p>This project demonstrates foundational SQL skills by exploring and analyzing retail sales data through a structured database. It walks through creating a database, cleaning the data, performing exploratory data analysis (EDA), and generating insights to support business decisions.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md" class="button">View Project</a></li>
@@ -96,7 +96,7 @@
 										<h2><a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md">Airbnb Data Analysis<br />
 										SQL Capstone Project</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md" class="image fit"><img src="images/airbnb.jpg" alt="" /></a>
 									<p>This capstone project demonstrates the use of **SQL** to explore, clean, and analyze Airbnb listings data. The project combines multiple datasets (listings, pricing, and reviews) to generate business insights for property hosts, guests, and Airbnb stakeholders.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md" class="button">View Project</a></li>
@@ -108,7 +108,7 @@
 										<h2><a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md">Tech Layoffs SQL<br />
 										Data Analysis Project</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md" class="image fit"><img src="images/layoff.jpg" alt="" /></a>
 									<p>This project analyzes global tech layoffs using SQL. The dataset includes major tech company layoffs, providing insights into trends over time, affected industries, funding stages, and company status. The project includes data cleaning, transformation, and analysis to generate meaningful business insights.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md" class="button">View Project</a></li>
