--- a/Sql.html
+++ b/Sql.html
@@ -98,7 +98,7 @@
 										<h2><a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md">Airbnb Data Analysis<br />
 										SQL Capstone Project</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md" class="image fit"><img src="images/airbnb.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md" class="image fit"><img src="Airbnb.jpg" alt="" /></a>
 									<p>This capstone project demonstrates the use of **SQL** to explore, clean, and analyze Airbnb listings data. The project combines multiple datasets (listings, pricing, and reviews) to generate business insights for property hosts, guests, and Airbnb stakeholders.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/airbnbsql/blob/main/README.md" class="button">View Project</a></li>
