--- a/Sql.html
+++ b/Sql.html
@@ -110,7 +110,7 @@
 										<h2><a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md">Tech Layoffs SQL<br />
 										Data Analysis Project</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md" class="image fit"><img src="images/layoff.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md" class="image fit"><img src="layoff.jpg" alt="" /></a>
 									<p>This project analyzes global tech layoffs using SQL. The dataset includes major tech company layoffs, providing insights into trends over time, affected industries, funding stages, and company status. The project includes data cleaning, transformation, and analysis to generate meaningful business insights.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/layoffs/blob/main/README.md" class="button">View Project</a></li>
