--- a/Sql.html
+++ b/Sql.html
@@ -86,7 +86,7 @@
 										<h2><a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md">Retail Sales Analysis<br />
 										using sql</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md" class="image fit"><img src="images/retail.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md" class="image fit"><img src="retail.jpg" alt="" /></a>
 									<p>This project demonstrates foundational SQL skills by exploring and analyzing retail sales data through a structured database. It walks through creating a database, cleaning the data, performing exploratory data analysis (EDA), and generating insights to support business decisions.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/retailsql/blob/main/README.md" class="button">View Project</a></li>
