--- a/powerbi.html
+++ b/powerbi.html
@@ -73,11 +73,11 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Power BI Data Analyst Project Samples<br /></a></h2>
-									<p>in this project we Power BI Project.</p>
+									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Power BI Data Analyst Project Portfolio<br /></a></h2>
+									<p>This repository contains a Power BI report (Movieslen.pbix) built on the popular MovieLens dataset. The project provides interactive visualizations and insights into movie ratings, user demographics, and genre trends.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/powerbi.webp" alt="" /></a>
-						githu		<ul class="actions special">
+						click		<ul class="actions special">
 									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
