--- a/powerbi.html
+++ b/powerbi.html
@@ -12,6 +12,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+<style>
+  .uniform-image {
+    width: 500px;
+    height: 500px;
+    object-fit: cover; /* keeps aspect ratio while filling the box */
+  }
+</style>
+	
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -87,7 +95,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md">🎬 Pixar Automation Studio Dashboard 📊<br />
+										<h2><a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md">🎬 Pixar Automation Studio Dashboard <br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md" class="image fit"><img src="images/pixar.jpg" alt="" /></a>
