--- a/powerbi.html
+++ b/powerbi.html
@@ -98,7 +98,7 @@
 										<h2><a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md">🎬 Pixar Automation Studio Dashboard <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md" class="image fit"><img src="images/pixar.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md" class="image fit"><img src="images/pixar.jpg" class="uniform-image"></a>
 									<p>A comprehensive, interactive data analytics dashboard built in Power BI, showcasing insights into Pixar movies' box office performance, critical reception, budget trends, and more.</p>
 									<ul class=" actions special">
 										<li><a href="https://github.com/Softechanalytics/PIXAR_Studio/blob/main/README.md" class="button">View Project</a></li>
@@ -110,7 +110,7 @@
 										<h2><a href="https://github.com/Softechanalytics/Pizza_Sales_Analysis/blob/main/README.md">Pizza Sales Analysis Report<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/Pizza_Sales_Analysis/blob/main/README.md" class="image fit"><img src="images/pizza.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/Pizza_Sales_Analysis/blob/main/README.md" class="image fit"><img src="images/pizza.jpg" class="uniform-image"></a>
 									<p>This repository contains a Power BI dashboard that provides insights into pizza sales data, including top-selling pizzas, quantity sold by category and size,
 										transaction analysis over time, most-used ingredients, and more.</p>
 									<ul class=" actions special">
@@ -123,7 +123,7 @@
 										<h2><a href="https://github.com/Softechanalytics/Yearly_Sales_Analysis/blob/main/README.md">Financial Analysis Dashboard<br />
 										r</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/Yearly_Sales_Analysis/blob/main/README.md" class="image fit"><img src="images/financial.png" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/Yearly_Sales_Analysis/blob/main/README.md" class="image fit"><img src="images/financial.png" class="uniform-image"></a>
 									<p>This repository contains a Power BI report (Financial sample.pbix) that provides comprehensive insights into financial data.
 										The interactive dashboard is designed to help stakeholders analyze key financial metrics, identify trends, and make data-driven decisions</p>
 									<ul class=" actions special">
@@ -136,7 +136,7 @@
 										<h2><a href="https://github.com/Softechanalytics/NBA_Player/blob/main/README.md">NBA Players Dashboard<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/NBA_Player/blob/main/README.md" class="image fit"><img src="images/NBA.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/NBA_Player/blob/main/README.md" class="image fit"><img src="images/NBA.jpg" class="uniform-image"></a>
 									<p>This repository contains an NBA analysis dashboard built using Power BI. The interactive report (NBA.pbix) explores historical NBA data, including team performance, player statistics, 
 										and game trends, providing deep insights for analysts, fans, and researchers.</p>
 									<ul class=" actions special">
@@ -149,7 +149,7 @@
 										<h2><a href="https://github.com/Softechanalytics/-Health_Safety_Report/blob/main/README.md">Health & Safety Data Analysis<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/-Health_Safety_Report/blob/main/README.md" class="image fit"><img src="images/heath.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/-Health_Safety_Report/blob/main/README.md" class="image fit"><img src="images/heath.jpg" class="uniform-image"></a>
 									<p>This repository contains a dataset of health and safety incidents, including details such as the date, number of incidents, near misses, lost hours, injuries, vehicle incidents, site, 
 										business unit, severity, and most frequent injury. 
 										The primary goal of this project is to analyze and visualize health and safety data to identify trends, improve safety measures, and reduce incidents.</p>
@@ -163,7 +163,7 @@
 										<h2><a href="https://github.com/Softechanalytics/Child_Mortality_rate/blob/main/README.md">Child Mortality Rate Dashboard<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/Child_Mortality_rate/blob/main/README.md" class="image fit"><img src="images/child.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/Child_Mortality_rate/blob/main/README.md" class="image fit"><img src="images/child.jpg" class="uniform-image"></a>
 									<p>This Power BI dashboard visualizes child mortality trends from 2000 to 2022. It highlights the estimated share of newborns who die before reaching the age of five. 
 										The dashboard provides insights into regional patterns, top-affected countries, and year-over-year changes in mortality rates.</p>
 									<ul class=" actions special">
