--- a/powerbi.html
+++ b/powerbi.html
@@ -12,13 +12,23 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-<style>
-  .uniform-image {
-    width: 500px;
-    height: 500px;
-    object-fit: cover; /* keeps aspect ratio while filling the box */
-  }
-</style>
+ <style>
+    .image-frame {
+      width: 400px;         /* Frame width */
+      height: 300px;        /* Frame height */
+      border: 2px solid #333;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .image-frame img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;    /* Options: contain | cover | fill | none | scale-down */
+    }
+  </style>
 	
 	<body class="is-preload">
 
@@ -29,7 +39,7 @@
 					<div id="intro">
 						<h1>📊 Chuks Isaac  <br />
 							Data Analyst Portfolio</h1>
-						<p class="skills">SQL | Python | Tableau | Excel | Power BI | Power Apps</p>
+						<p class="skills">SQL | Python | Tableau | Excel | Power BI </p>
 						<p>
 							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools. I leverage my expertise in SQL and Python for robust data modeling, while harnessing Tableau, Power BI, Excel, and Power Apps to deliver clear, dynamic visualizations and efficient business solutions.
 						</p>
@@ -56,7 +66,7 @@
 							<li><a href="python.html">Python </a></li>
 							<li><a href="Tableau.html">Tableau </a></li>
 							<li><a href="Excel.html">Excel</a></li>
-							<li><a href="powerapp.html">Power_App</a></li>
+							
 						</ul>
 						<ul class=" icons alt">
 							<li>
@@ -123,7 +133,9 @@
 										<h2><a href="https://github.com/Softechanalytics/Yearly_Sales_Analysis/blob/main/README.md">Financial Analysis Dashboard<br />
 										r</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/Yearly_Sales_Analysis/blob/main/README.md" class="image fit"><img src="images/financial.png" class="uniform-image"></a>
+									 <div class="image-frame">
+										<a href="https://github.com/Softechanalytics/Yearly_Sales_Analysis/blob/main/README.md" class="image fit"><img src="images/financial.png" alt="Framed Image"></a>
+									 </div>
 									<p>This repository contains a Power BI report (Financial sample.pbix) that provides comprehensive insights into financial data.
 										The interactive dashboard is designed to help stakeholders analyze key financial metrics, identify trends, and make data-driven decisions</p>
 									<ul class=" actions special">
