--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 							<a href="Sql.html">SQL</a> | 
 							<a href="python.html">Python</a> | 
 							<a href="Tableau.html">Tableau</a> | 
-							<a href="powerbi.html">Power BI</a> | 
-							<a href="powerapp.html">Power APP </a>
+							<a href="powerbi.html">Power BI</a> 
+							
 						  </p>
 						<p>
 							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools.
